# exceptions_from_library

./: CMakeLists.txt  README.md  file_with_tag.txt  main.cpp
custom_lib/: CMakeLists.txt  manager.cpp  manager.h  worker.cpp  worker.h
